# smg

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  REVIEW.md
.github/workflows/: claude-code-review.yml  e2e-gpu-job.yml  pr-test-rust.yml
docs/: index.md
docs/contributing/: development.md
docs/getting-started/: mcp.md
docs/onboarding/: manual-testing-backends.md
docs/reference/: configuration.md  metrics.md
e2e_test/: pyproject.toml
e2e_test/chat_completions/: test_enable_thinking.py  test_function_calling.py  test_openai_server.py  test_reasoning_content.py  test_structured_output.py  test_validation.py
e2e_test/embeddings/: test_basic.py  test_correctness.py
e2e_test/fixtures/: hooks.py
e2e_test/infra/: constants.py  gateway.py  gpu_monitor.py  model_specs.py  worker.py
e2e_test/messages/: test_mcp_tool.py  test_tool_search.py
e2e_test/realtime/: __init__.py  test_realtime_ws.py
e2e_test/responses/: test_builtin_tools.py  test_state_management.py  test_streaming_events.py  test_structured_output.py  test_tools_call.py
examples/wasm/wasm-guest-storage-hook-passthrough/: Cargo.toml
grpc_servicer/: README.md
kv_index/src/: event_tree.rs
model_gateway/: Cargo.toml
model_gateway/benches/: routing_allocation_bench.rs
model_gateway/src/: app_context.rs  lib.rs  main.rs  middleware.rs  server.rs  service_discovery.rs
model_gateway/tests/: mesh_integration_test.rs  wasm_test.rs
protocols/src/: worker.rs
scripts/: ci_install_e2e_deps.sh  ci_install_rust.sh  ci_install_sglang.sh  ci_install_vllm.sh
tui/src/: event.rs
(+187 files in other folders)
