[package]
name = "wasm-guest-storage-hook-passthrough"
version = "0.1.0"
edition = "2021"

[workspace]

[lib]
crate-type = ["cdylib"]

[dependencies]
wit-bindgen = { version = "0.21", features = ["macros"] }
# Pin to avoid heck 0.4.1 breakage with unicode-segmentation 1.12.0
unicode-segmentation = ">=1.10, <1.12"
